2004-10-26 Alain Magloire
	Remove of ICDISignalManager in CDI
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SignalManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Signal.java

2004-10-25 Alain Magloire
	Remove of ICDExpressionManager in CDI
	ICDIExpression changes in the interface.
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/EventManager.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/ExpressionManager.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/Session.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/event/ChangedEvent.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/event/DestroyedEvent.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/model/Expression.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/model/Target.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/model/Variable.java
	
2004-10-24 Alain Magloire
	Changes in ICDITarget.evaluateExpressionToString()
	* org/eclipse/cdt/debug/mi/core/cdi/model/Target.java

2004-10-20 Alain Magloire
	Use the new ICDIDebugger interface

	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/SessionProcess.java
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java
	* src/org/eclipse/cdt/debug/mi/core/MIProcessAdapter.java
	* plugin.xml

2004-10-20 David Inglis
	Fixed terminated delay for corefile
	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java
	
2004-10-19 Alain Magloire
	Fix Core Launching
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* mi/org/eclipse/cdt/debug/mi/core/CoreProcess.java
	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java
